--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -6,6 +6,6 @@
 [settings]
 default = musicComment.settings
 
-[deploy]
-#url = http://localhost:6800/
+[deploy:musicConment]
+#url = http://47.93.0.208:6800/
 project = musicComment
